objects/Pattern__c.object
<CustomObject><fields>
        <fullName>Core_Box_Hours__c</fullName>
        <label>Core Box Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Core_Model_Hours__c</fullName>
        <label>Core Model Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Hourly_Rate__c</fullName>
        <defaultValue>140</defaultValue>
        <label>Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Master_Pattern_Hours__c</fullName>
        <label>Master Pattern Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Material_Cost__c</fullName>
        <label>Material Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Mount_Runner_Hours__c</fullName>
        <label>Mount &amp; Runner Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>No_of_Core_Boxes__c</fullName>
        <label>No of Core Boxes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>No_of_Impressions__c</fullName>
        <label>No of Impressions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>No_of_Impressions_in_CBox__c</fullName>
        <label>No. of Impressions in C/Box</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Pattern_Material__c</fullName>
        <label>Pattern Material</label>
        <picklist>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic and Timber</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Pattern_Mould_Hours__c</fullName>
        <label>Pattern Mould Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Pattern_Notes__c</fullName>
        <label>Pattern Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Plastic_Pattern_Hours__c</fullName>
        <label>Plastic Pattern Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Product_Configuration__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Patterns</relationshipLabel>
        <relationshipName>Patterns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Subtotal__c</fullName>
        <formula>Hourly_Rate__c *  Total_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Pattern_Cost__c</fullName>
        <label>Total Pattern Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Time__c</fullName>
        <formula>Core_Box_Hours__c + Core_Model_Hours__c + Master_Pattern_Hours__c + Mount_Runner_Hours__c + Pattern_Mould_Hours__c + Plastic_Pattern_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Type_of_Pattern__c</fullName>
        <label>Type of Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>Loose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mounted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Type_of_Plate__c</fullName>
        <label>Type of Plate</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Type_of_Sand__c</fullName>
        <label>Type of Sand</label>
        <picklist>
            <picklistValues>
                <fullName>Hard Sand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Sand</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Pattern</label><nameField>
        <displayFormat>Pattern-{000000}</displayFormat>
        <label>Pattern Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Patterns</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>